--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
     <div class="contact-form">
        
-        <form class="flex flex-col max-w-screen-sm mx-auto mt-11" id="contactForm" method="post" action="send.php">
+        <form class="flex flex-col max-w-screen-sm mx-auto mt-11" id="contactForm" method="post">
             <label class="text-white" for="name">Имя</label>
             <input class="bg-slate-500 mb-5" type="text" id="name" name="name" required>
 
